Chapter 4 part 1 review

--- a/chapter2.tex
+++ b/chapter2.tex
@@ -61,7 +61,7 @@ Todo: more
 
 The surface temperature is measured directly at the surface of an object and is the main indicator of the surface urban heat island (SUHI). Surface temperature, in contrast to air temperature, typically is measured via remote sensing technologies like LST via satellites. Well-known satellites include MODIS, Landsat ... (todo list all), that all carry different types of instruments and sensors, that are able to take various measurements. Through the use of satellites, the spatial coverage is great, but raster sizes usually range from one kilometer to a hundred, so the spatial resolution is not that great compared to denser sensor networks. Additionally, these satellites are not geostionary to cover a wide range and therefore only take measurements during a handfull of times a day (todo: number of fly overs with example). Another downside is that satellites in many cases need clear-sky condidtions to measure surface temperature at ground level, as their sensors are not able to penetrate the cloud surface. As a solution, some technologies such as LIDAR (todo check if true) offer the approximation of the underlying surface temperature below clouds by measuring the out-going radiation of the surface.
 todo: List of measurement types (microwaves etc.) with disadvantages\\
-Surface and air temperatures can vary greatly, therefore a SUHI does not necessarily also imply a CUHI.
+Surface and air temperatures can vary greatly, therefore a SUHI does not necessarily also imply a CUHI. Especially in extreme heat events, LST and air temperature can deviate greatly~\cite{good2016situ}.
 
 \section{Smart Cities}
 
