--- a/chapter8.tex
+++ b/chapter8.tex
@@ -47,10 +47,19 @@ In the context of geostatistical analysis, there are different types of Krigin m
 In the scope of this work, we unfortunately cannot compare all of these methods with each other and therefore need to focus on a subset of methods. EBK and EBKRP are one of the most commonly used methods for temperature interpolation (cite). According to \cite{njoku2023effects}, EBKRP continously outperforms EBK in different weather station density scenarios, therefore we will use EBKRP as a baseline for our comparison.\\
 In the following, the machine learning fundamentals for this work are explained and the different ML regression model types are introduced.
 
-\section{Data Set Procurement}
+\section{Model Evaluation}
 
 TODO
 
-\section{Model Comparison}
+\subsection{Model Validity}
 
-TODO
+% TODO
+Use 70\% of data for training, 30\% for test. cross-validation
+
+\section{Variable Importance}
+
+\section{Uncertainty Analysis}
+
+measurement uncertainty, contextual uncertainty, prediction uncertainty
+
+\section{}
