--- a/references.bib
+++ b/references.bib
@@ -495,3 +495,130 @@
   year={2011},
   publisher={American Meteorological Society}
 }
+
+@article{hahn2022observations,
+  title={Observations from Personal Weather Stations—EUMETNET Interests and Experience},
+  author={Hahn, Claudia and Garcia-Marti, Irene and Sugier, Jacqueline and Emsley, Fiona and Beaulant, Anne-Lise and Oram, Louise and Strandberg, Eva and Lindgren, Elisa and Sunter, Martyn and Ziska, Franziska},
+  journal={Climate},
+  volume={10},
+  number={12},
+  pages={192},
+  year={2022},
+  publisher={MDPI}
+}
+
+@article{fenner2021crowdqc+,
+  title={CrowdQC+—a quality-control for crowdsourced air-temperature observations enabling world-wide urban climate applications},
+  author={Fenner, Daniel and Bechtel, Benjamin and Demuzere, Matthias and Kittner, Jonas and Meier, Fred},
+  journal={Frontiers in Environmental Science},
+  volume={9},
+  pages={553},
+  year={2021},
+  publisher={Frontiers}
+}
+
+@article{venter2020hyperlocal,
+  title={Hyperlocal mapping of urban air temperature using remote sensing and crowdsourced weather data},
+  author={Venter, Zander S and Brousse, Oscar and Esau, Igor and Meier, Fred},
+  journal={Remote Sensing of Environment},
+  volume={242},
+  pages={111791},
+  year={2020},
+  publisher={Elsevier}
+}
+
+@article{zumwald2021mapping,
+  title={Mapping urban temperature using crowd-sensing data and machine learning},
+  author={Zumwald, Marius and Kn{\"u}sel, Benedikt and Bresch, David N and Knutti, Reto},
+  journal={Urban Climate},
+  volume={35},
+  pages={100739},
+  year={2021},
+  publisher={Elsevier}
+}
+
+@article{good2016situ,
+  title={An in situ-based analysis of the relationship between land surface “skin” and screen-level air temperatures},
+  author={Good, Elizabeth Jane},
+  journal={Journal of Geophysical Research: Atmospheres},
+  volume={121},
+  number={15},
+  pages={8801--8819},
+  year={2016},
+  publisher={Wiley Online Library}
+}
+
+@article{zhang2012bias,
+  title={Bias-corrected random forests in regression},
+  author={Zhang, Guoyi and Lu, Yan},
+  journal={Journal of Applied Statistics},
+  volume={39},
+  number={1},
+  pages={151--160},
+  year={2012},
+  publisher={Taylor \& Francis}
+}
+
+@article{zuur2010protocol,
+  title={A protocol for data exploration to avoid common statistical problems},
+  author={Zuur, Alain F and Ieno, Elena N and Elphick, Chris S},
+  journal={Methods in ecology and evolution},
+  volume={1},
+  number={1},
+  pages={3--14},
+  year={2010},
+  publisher={Wiley Online Library}
+}
+
+@article{voelkel2017towards,
+  title={Towards systematic prediction of urban heat islands: Grounding measurements, assessing modeling techniques},
+  author={Voelkel, Jackson and Shandas, Vivek},
+  journal={Climate},
+  volume={5},
+  number={2},
+  pages={41},
+  year={2017},
+  publisher={MDPI}
+}
+
+@article{sugawara2008temperature,
+  title={Temperature and wind distribution in an EW-oriented urban street canyon},
+  author={Sugawara, Hirofumi and Hagishima, Aya and Narita, Ken-ichi and Ogawa, Hiroko and Yamano, Mitsuo},
+  journal={SOLA},
+  volume={4},
+  pages={53--56},
+  year={2008},
+  publisher={Meteorological Society of Japan}
+}
+
+@article{breiman2001random,
+  title={Random forests},
+  author={Breiman, Leo},
+  journal={Machine learning},
+  volume={45},
+  pages={5--32},
+  year={2001},
+  publisher={Springer}
+}
+
+@article{iyer2022modeling,
+  title={Modeling fine-grained spatio-temporal pollution maps with low-cost sensors},
+  author={Iyer, Shiva R and Balashankar, Ananth and Aeberhard, William H and Bhattacharyya, Sujoy and Rusconi, Giuditta and Jose, Lejo and Soans, Nita and Sudarshan, Anant and Pande, Rohini and Subramanian, Lakshminarayanan},
+  journal={npj Climate and Atmospheric Science},
+  volume={5},
+  number={1},
+  pages={76},
+  year={2022},
+  publisher={Nature Publishing Group UK London}
+}
+
+@article{yang2019designing,
+  title={Designing sensor networks to resolve spatio-temporal urban temperature variations: fixed, mobile or hybrid?},
+  author={Yang, Jiachuan and Bou-Zeid, Elie},
+  journal={Environmental Research Letters},
+  volume={14},
+  number={7},
+  pages={074022},
+  year={2019},
+  publisher={IOP Publishing}
+}
